
[package]
license = "MIT"
name = "jlib"
authors = ["zTgx <beautifularea@163.com>"]
readme = "README.md"
repository = "https://github.com/zTgx/jlib-rs.git"
version = "0.0.1"

[dependencies]
num = "0.2"
rand = "0.6"
ws = "0.8.1"

url = "1.7.2"
hex = "0.3.2"
log = "0.4.0"
sha2 = "0.8.0"
void = "1.0.2"
ring = "0.14.6"
serde_json = "1.0"
typename = "0.1.1"

env_logger = "0.6.1"
secp256k1 = "0.13.0"
rust-crypto = "^0.2"
lazy_static = "1.3.0"
ed25519-dalek = "0.9.1"

serde = { version = "1.0", features = ["derive"] }
basex-rs = { git = "https://github.com/zTgx/basex-rs.git" }
cast-rs = { git = "https://github.com/zTgx/cast-rs.git" }
