
[package]
name = "jlib"
version = "0.3.1"
authors = ["zTgx <beautifularea@163.com>"]
repository = "https://github.com/zTgx/jlib-rs.git"
readme = "README.md"
keywords = ["blockchain", "crypto"]
categories = [ "cryptography" ]
license = "MIT/Apache-2.0"
exclude = [ "/.travis.yml" ]
description = "A lightweight blockchain lib."

[dependencies]
num = "0.2"
rand = "0.6"
ws = { version = "0.8.1", features = ["ssl"]}
url = "1.7.2"
hex = "0.3.2"
log = "0.4.0"
sha2 = "0.8.0"
void = "1.0.2"
ring = "0.14.6"
serde_json = "1.0"
typename = "0.1.1"
env_logger = "0.6.1"
secp256k1 = "0.13.0"
rust-crypto = "^0.2"
lazy_static = "1.3.0"
ed25519-dalek = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
basex-rs = "0.1.1"
cast-rs = "0.2.1"
juniper = "0.9.2"
actix-web = "1.0.5"
futures = "0.1"
serde_derive = "1.0"
